force-app/main/default/objects/Health_Fund_and_Insurance__c/Health_Fund_and_Insurance__c.object-meta.xml
<CustomObject>
    <label>Health Fund and Insurance</label>
    <nameField>
        <label>Health Funds and Insurance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Health Funds and Insurance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>