force-app/main/default/objects/Health_Fund_and_Insurance__c/fields/DVA__c.field-meta.xml
<CustomField>
    <fullName>DVA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DVA</label>
    <type>Checkbox</type>
</CustomField>