force-app/main/default/objects/Health_Fund_and_Insurance__c/fields/DVA_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>DVA_Expiry_Date__c</fullName>
    <label>DVA Expiry Date</label>
    <length>5</length>
    <type>Text</type>
</CustomField>