force-app/main/default/objects/Health_Fund_and_Insurance__c/fields/DVA_Number__c.field-meta.xml
<CustomField>
    <fullName>DVA_Number__c</fullName>
    <label>DVA Number</label>
    <length>8</length>
    <type>Text</type>
</CustomField>