force-app/main/default/objects/Health_Fund_and_Insurance__c/fields/Fund_Code__c.field-meta.xml
<CustomField>
    <fullName>Fund_Code__c</fullName>
    <formula>Health_Fund__r.Fund_Brand_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fund Code</label>
    <type>Text</type>
</CustomField>