force-app/main/default/objects/Health_Fund_and_Insurance__c/fields/Health_Fund__c.field-meta.xml
<CustomField>
    <fullName>Health_Fund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Health Fund</label>
    <referenceTo>Health_Fund__c</referenceTo>
    <relationshipLabel>Health Funds and Insurance</relationshipLabel>
    <relationshipName>Health_Funds_and_Insurance</relationshipName>
    <type>Lookup</type>
</CustomField>