force-app/main/default/objects/Health_Fund_and_Insurance__c/fields/Insurance_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Expiry_Date__c</fullName>
    <inlineHelpText>&quot;DD/MM/YYYY&quot; Format</inlineHelpText>
    <label>Insurance Expiry Date</label>
    <length>10</length>
    <type>Text</type>
</CustomField>