force-app/main/default/objects/Health_Fund_and_Insurance__c/fields/Membership_Issue_number__c.field-meta.xml
<CustomField>
    <fullName>Membership_Issue_number__c</fullName>
    <inlineHelpText>This is the order in which the patients on the card were issued insurance. If there is only one patient on the card, this number is 1.</inlineHelpText>
    <label>Membership Issue number</label>
    <type>TextArea</type>
</CustomField>