force-app/main/default/objects/Health_Fund_and_Insurance__c/fields/Patient_Donor__c.field-meta.xml
<CustomField>
    <fullName>Patient_Donor__c</fullName>
    <label>Patient &amp; Donor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Health Funds and Insurance</relationshipLabel>
    <relationshipName>Health_Funds_and_Insurance</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>