force-app/main/default/objects/Health_Fund_and_Insurance__c/recordTypes/DVA.recordType-meta.xml
<RecordType>
    <fullName>DVA</fullName>
    <active>true</active>
    <label>DVA</label>
</RecordType>