force-app/main/default/objects/Health_Fund_and_Insurance__c/recordTypes/Private_Health_Fund.recordType-meta.xml
<RecordType>
    <fullName>Private_Health_Fund</fullName>
    <active>true</active>
    <label>Private Health Fund</label>
</RecordType>