force-app/main/default/objects/Health_Fund_and_Insurance__c/validationRules/Character_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Character_Limit</fullName>
    <active>true</active>
    <description>Limits to 2</description>
    <errorConditionFormula>LEN(Membership_Issue_number__c) &gt;2</errorConditionFormula>
    <errorDisplayField>Membership_Issue_number__c</errorDisplayField>
    <errorMessage>Too long, maximum 2 characters.</errorMessage>
</ValidationRule>