force-app/main/default/objects/Health_Fund_and_Insurance__c/listViews/All_Health_Funds_and_Insurance.listView-meta.xml
<ListView>
    <fullName>All_Health_Funds_and_Insurance</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All Health Funds and Insurance</label>
</ListView>